<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.scitia</groupId>
  <artifactId>aleatoricism-project</artifactId>
  <packaging>pom</packaging>
  <version>0.0.1-SNAPSHOT</version>
  <name>aleatoricism-project</name>

  <modules>
    <module>aleatoricism</module>
    <module>aleatoricism-chain</module>
    <module>aleatoricism-flows</module>
    <module>aleatoricism-spring-boot-autoconfigure</module>
    <module>aleatoricism-spring-boot-starter</module>
    <module>aleatoricism-spring-boot-sample-app</module>
  </modules>

  <properties>
    <java.version>25</java.version>
    <spring-boot.version>4.0.5</spring-boot.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.github.scitia</groupId>
        <artifactId>aleatoricism-chain</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.scitia</groupId>
        <artifactId>aleatoricism-flows</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.scitia</groupId>
        <artifactId>aleatoricism-spring-boot-autoconfigure</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.scitia</groupId>
        <artifactId>aleatoricism-spring-boot-starter</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.15.0</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring-boot.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
